kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tms-app
  namespace: wackops
spec:
  selector:
    app: tms-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
