kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: tms-ingress
  namespace: wackops
spec:
  ingressClassName: nginx
  rules:
  - host: tms.ops.infotitans.ca
    http:
      paths:
      - backend:
          service:
            name: tms-app
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tms.ops.infotitans.ca
    secretName: tms-ops-infotitans-secret
